--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,19 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+logs/
+target/
+build/
+cache/
+files/
+lib/
+
+**/*.*~
+**/*.~
+
+.settings/
+.project
+.classpath
+
+dependency-reduced-pom.xml
